force-app/src/objects/TR1__Candidate_Opt_Out__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Candidate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidates Opt-Out</relationshipLabel>
        <relationshipName>Candidates_Opt_Out</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Computed_key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>It&apos;s an unique combination of contact and emailType</inlineHelpText>
        <label>Computed key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Email_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Email Type</label>
        <referenceTo>TR1__Email_Type__c</referenceTo>
        <relationshipLabel>Candidates Opt-Out</relationshipLabel>
        <relationshipName>Candidates_Opt_Out</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Candidate Opt-Out</label>
    <nameField>
        <label>Candidate Opt-Out Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates Opt-Out</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>